--- a/projects_cn/student_intervention/student_intervention.ipynb
+++ b/projects_cn/student_intervention/student_intervention.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**答案: **"
+    "**答案: **  应该是分类问题。因为可能的输出：(正常毕业，无法毕业)是离散有限个的。"
    ]
   },
   {
@@ -45,11 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student data read successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# 载入所需要的库\n",
     "import numpy as np\n",
@@ -59,7 +67,10 @@
     "\n",
     "# 载入学生数据集\n",
     "student_data = pd.read_csv(\"student-data.csv\")\n",
-    "print \"Student data read successfully!\""
+    "print \"Student data read successfully!\"\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "#print student_data"
    ]
   },
   {
@@ -77,26 +88,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of students: 395\n",
+      "Number of features: 31\n",
+      "Number of students who passed: 265\n",
+      "Number of students who failed: 130\n",
+      "Graduation rate of the class: 67.09%\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO： 计算学生的数量\n",
-    "n_students = None\n",
+    "n_students = student_data.shape[0]\n",
     "\n",
     "# TODO： 计算特征数量\n",
-    "n_features = None\n",
+    "n_features = student_data.shape[1]\n",
     "\n",
     "# TODO： 计算通过的学生数\n",
-    "n_passed = None\n",
+    "n_passed = student_data[student_data[\"passed\"] == \"yes\"].shape[0]\n",
     "\n",
     "# TODO： 计算未通过的学生数\n",
-    "n_failed = None\n",
+    "n_failed = student_data[student_data[\"passed\"] == \"no\"].shape[0]\n",
     "\n",
     "# TODO： 计算通过率\n",
-    "grad_rate = None\n",
+    "grad_rate = float(n_passed)/(float(n_students)) * 100\n",
     "\n",
     "# 输出结果\n",
     "print \"Total number of students: {}\".format(n_students)\n",
@@ -120,11 +143,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature columns:\n",
+      "['school', 'sex', 'age', 'address', 'famsize', 'Pstatus', 'Medu', 'Fedu', 'Mjob', 'Fjob', 'reason', 'guardian', 'traveltime', 'studytime', 'failures', 'schoolsup', 'famsup', 'paid', 'activities', 'nursery', 'higher', 'internet', 'romantic', 'famrel', 'freetime', 'goout', 'Dalc', 'Walc', 'health', 'absences']\n",
+      "\n",
+      "Target column: passed\n",
+      "\n",
+      "Feature values:\n",
+      "  school sex  age address famsize Pstatus  Medu  Fedu     Mjob      Fjob  \\\n",
+      "0     GP   F   18       U     GT3       A     4     4  at_home   teacher   \n",
+      "1     GP   F   17       U     GT3       T     1     1  at_home     other   \n",
+      "2     GP   F   15       U     LE3       T     1     1  at_home     other   \n",
+      "3     GP   F   15       U     GT3       T     4     2   health  services   \n",
+      "4     GP   F   16       U     GT3       T     3     3    other     other   \n",
+      "\n",
+      "   reason guardian  traveltime  studytime  failures schoolsup famsup paid  \\\n",
+      "0  course   mother           2          2         0       yes     no   no   \n",
+      "1  course   father           1          2         0        no    yes   no   \n",
+      "2   other   mother           1          2         3       yes     no  yes   \n",
+      "3    home   mother           1          3         0        no    yes  yes   \n",
+      "4    home   father           1          2         0        no    yes  yes   \n",
+      "\n",
+      "  activities nursery higher internet romantic  famrel  freetime  goout  Dalc  \\\n",
+      "0         no     yes    yes       no       no       4         3      4     1   \n",
+      "1         no      no    yes      yes       no       5         3      3     1   \n",
+      "2         no     yes    yes      yes       no       4         3      2     2   \n",
+      "3        yes     yes    yes      yes      yes       3         2      2     1   \n",
+      "4         no     yes    yes       no       no       4         3      2     1   \n",
+      "\n",
+      "   Walc  health  absences  \n",
+      "0     1       3         6  \n",
+      "1     1       3         4  \n",
+      "2     3       3        10  \n",
+      "3     1       5         2  \n",
+      "4     2       5         4  \n"
+     ]
+    }
+   ],
    "source": [
     "# 提取特征列\n",
     "feature_cols = list(student_data.columns[:-1])\n",
@@ -160,11 +223,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed feature columns (48 total features):\n",
+      "['school_GP', 'school_MS', 'sex_F', 'sex_M', 'age', 'address_R', 'address_U', 'famsize_GT3', 'famsize_LE3', 'Pstatus_A', 'Pstatus_T', 'Medu', 'Fedu', 'Mjob_at_home', 'Mjob_health', 'Mjob_other', 'Mjob_services', 'Mjob_teacher', 'Fjob_at_home', 'Fjob_health', 'Fjob_other', 'Fjob_services', 'Fjob_teacher', 'reason_course', 'reason_home', 'reason_other', 'reason_reputation', 'guardian_father', 'guardian_mother', 'guardian_other', 'traveltime', 'studytime', 'failures', 'schoolsup', 'famsup', 'paid', 'activities', 'nursery', 'higher', 'internet', 'romantic', 'famrel', 'freetime', 'goout', 'Dalc', 'Walc', 'health', 'absences']\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess_features(X):\n",
     "    ''' 预处理学生数据，将非数字的二元特征转化成二元值（0或1），将分类的变量转换成虚拟变量\n",
@@ -208,25 +280,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set has 300 samples.\n",
+      "Testing set has 95 samples.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO：在这里导入你可能需要使用的另外的功能\n",
-    "\n",
+    "from sklearn.cross_validation import train_test_split \n",
     "# TODO：设置训练集的数量\n",
-    "num_train = None\n",
+    "num_train = 300\n",
     "\n",
     "# TODO：设置测试集的数量\n",
     "num_test = X_all.shape[0] - num_train\n",
     "\n",
     "# TODO：把数据集混洗和分割成上面定义的训练集和测试集\n",
-    "X_train = None\n",
-    "X_test = None\n",
-    "y_train = None\n",
-    "y_test = None\n",
+    "#X_train = None\n",
+    "#X_test = None\n",
+    "#y_train = None\n",
+    "#y_test = None\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, train_size = num_train, random_state = 42) \n",
     "\n",
     "# 显示分割的结果\n",
     "print \"Training set has {} samples.\".format(X_train.shape[0])\n",
@@ -544,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
