decision tree partly done

--- a/projects_cn/student_intervention/student_intervention.ipynb
+++ b/projects_cn/student_intervention/student_intervention.ipynb
@@ -45,9 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +350,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答: **"
+    "**回答: **\n",
+    "\n",
+    "* Decision Trees 决策树\n",
+    "    - 应用场景：根据是否拥有房产，是否结婚，平均月收入预测等贷款用户是否具有偿还贷款的能力。[`ref`](http://www.ibm.com/developerworks/cn/analytics/library/ba-1507-decisiontree-algorithm/) \n",
+    "    - 优势：相对易于理解和实现;能够同时处理数值型型和label型的属性;训练集可以包含一定的错误;在相对短的时间内能够对大型数据源做出可行且效果良好的结果\n",
+    "    - 缺点：对于那些各类别样本数量不一致的数据，在决策树当中信息增益的结果偏向于那些具有更多数值的特征;比较容易over-fit\n",
+    "    - 结合当前数据集的特点,该问题是一个分类问题，实例是由“feature-value”表示的，输出是离散值。\n",
+    "* Support Vector Machines (SVM) 向量模型机    "
    ]
   },
   {
@@ -366,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -429,34 +437,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.6325.\n",
+      "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7302.\n",
+      "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.0030 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.6935.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO：从sklearn中引入三个监督学习模型\n",
-    "# from sklearn import model_A\n",
+    "from sklearn.tree import DecisionTreeClassifier \n",
     "# from sklearn import model_B\n",
     "# from skearln import model_C\n",
     "\n",
     "# TODO：初始化三个模型\n",
-    "clf_A = None\n",
+    "clf_A = DecisionTreeClassifier()\n",
     "clf_B = None\n",
     "clf_C = None\n",
     "\n",
     "# TODO：设置训练集大小\n",
-    "X_train_100 = None\n",
-    "y_train_100 = None\n",
+    "X_train_100 = X_train[:100]\n",
+    "y_train_100 = y_train[:100]\n",
     "\n",
-    "X_train_200 = None\n",
-    "y_train_200 = None\n",
+    "X_train_200 = X_train[:200]\n",
+    "y_train_200 = y_train[:200]\n",
     "\n",
-    "X_train_300 = None\n",
-    "y_train_300 = None\n",
+    "X_train_300 = X_train[:]\n",
+    "y_train_300 = y_train[:]\n",
+    "\n",
     "\n",
     "# TODO：对每一个分类器和每一个训练集大小运行'train_predict' \n",
-    "# train_predict(clf, X_train, y_train, X_test, y_test)"
+    "# train_predict(clf, X_train, y_train, X_test, y_test)\n",
+    "\n",
+    "clf_list = [clf_A]\n",
+    "X_train_list = [X_train_100, X_train_200, X_train_300]\n",
+    "y_train_list = [y_train_100, y_train_200, y_train_300]\n",
+    "\n",
+    "for clf in clf_list:\n",
+    "    for X_train, y_train in zip(X_train_list, y_train_list):\n",
+    "        train_predict(clf, X_train, y_train, X_test, y_test)\n"
    ]
   },
   {
