--- a/projects_cn/student_intervention/student_intervention.ipynb
+++ b/projects_cn/student_intervention/student_intervention.ipynb
@@ -357,7 +357,51 @@
     "    - 优势：相对易于理解和实现;能够同时处理数值型型和label型的属性;训练集可以包含一定的错误;在相对短的时间内能够对大型数据源做出可行且效果良好的结果\n",
     "    - 缺点：对于那些各类别样本数量不一致的数据，在决策树当中信息增益的结果偏向于那些具有更多数值的特征;比较容易over-fit\n",
     "    - 结合当前数据集的特点,该问题是一个分类问题，实例是由“feature-value”表示的，输出是离散值。\n",
-    "* Support Vector Machines (SVM) 向量模型机    "
+    "\n",
+    "* Support Vector Machines (SVM) 向量模型机\n",
+    "    - 应用场景:用于糖尿病诊断的分类 [`ref`](http://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/1472-6947-10-16)\n",
+    "    - 优势：可以解决小样本情况下的机器学习问题;可以解决高维问题;可以采用kernel trick解决。\n",
+    "    - 缺点：对缺失数据敏感；对非线性问题没有通用解决方案，必须谨慎选择Kernelfunction来处理\n",
+    "    - 当前数据集样本较小,维度较多，可以采用SVM\n",
+    "\n",
+    "* Gaussian Naive Bayes\n",
+    "    - 应用场景: 用于阿尔茨海默病的分类[`ref`](http://jamia.oxfordjournals.org/content/18/4/370.short)\n",
+    "    - 优势：有着坚实的数学基础，以及稳定的分类效率; NBC模型所需估计的参数很少，对缺失数据不太敏感，算法也比较简单\n",
+    "    - 缺点：假设属性之间相互独立，这个假设在实际应用中往往是不成立的\n",
+    "    - 当前数据集属性之间关系未知，可以假设独立，采用Naive Bayes进行实验\n",
+    "    \n",
+    "* Random Forest\n",
+    "    - 应用场景：提升足球机器人守门员的表现[`ref`](http://ieeexplore.ieee.org/document/5455334/?arnumber=5455334)\n",
+    "    - 优势：具备高维数据集的处理能力; 在对缺失数据进行估计时，随机森林是一个十分有效的方法;当存在分类不平衡的情况时，随机森林能够提供平衡数据集误差的有效方法\n",
+    "    - 缺点：生成的模型为黑盒模型，不易解释\n",
+    "    - 当前数据集维度较高，适合采用Random Forest\n",
+    "    \n",
+    "* AdaBoost\n",
+    "    - 应用场景：用于光刻缺陷热点检测[`ref`](http://proceedings.spiedigitallibrary.org/proceeding.aspx?articleid=2210418)\n",
+    "    - 优点：精度较高,不用做特征筛选；不用担心overfitting\n",
+    "    - 缺点：容易受到噪声干扰；训练时间过长；执行效果依赖于弱分类器的选择\n",
+    "    - 当前数据集较小，容易overfitting, 可以采用adaBoost算法\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -498,7 +542,9 @@
     "\n",
     "for clf in clf_list:\n",
     "    for X_train, y_train in zip(X_train_list, y_train_list):\n",
-    "        train_predict(clf, X_train, y_train, X_test, y_test)\n"
+    "        train_predict(clf, X_train, y_train, X_test, y_test)\n",
+    "        \n",
+    "    print     \n"
    ]
   },
   {
@@ -513,13 +559,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** 分类器 1 - ?**  \n",
+    "** 分类器 1 - DecisionTree**  \n",
     "\n",
     "| 训练集大小 | 训练时间 | 预测时间 (测试) | F1值 (训练) | F1值 (测试) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |        EXAMPLE          |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |    EXAMPLE      |\n",
+    "| 100               |        0.0020           |       0.0              |  1               |  0.6325         |\n",
+    "| 200               |        0.0020           |       0.0              |  1               |  0.7302         |\n",
+    "| 300               |        0.0030           |       0.0              |  1               |  0.6935         |\n",
     "\n",
     "** 分类器 2 - ?**  \n",
     "\n",
