--- a/projects_cn/student_intervention/student_intervention.ipynb
+++ b/projects_cn/student_intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -491,36 +491,119 @@
      "output_type": "stream",
      "text": [
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0020 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Trained model in 0.0013 seconds\n",
+      "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.6325.\n",
+      "Made predictions in 0.0002 seconds.\n",
+      "F1 score for test set: 0.6195.\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0020 seconds\n",
-      "Made predictions in 0.0000 seconds.\n",
+      "Trained model in 0.0032 seconds\n",
+      "Made predictions in 0.0008 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7302.\n",
+      "Made predictions in 0.0005 seconds.\n",
+      "F1 score for test set: 0.7500.\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0030 seconds\n",
-      "Made predictions in 0.0000 seconds.\n",
+      "Trained model in 0.0042 seconds\n",
+      "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.6935.\n"
+      "Made predictions in 0.0003 seconds.\n",
+      "F1 score for test set: 0.6281.\n",
+      "\n",
+      "Training a SVC using a training set size of 100. . .\n",
+      "Trained model in 0.0019 seconds\n",
+      "Made predictions in 0.0012 seconds.\n",
+      "F1 score for training set: 0.8777.\n",
+      "Made predictions in 0.0011 seconds.\n",
+      "F1 score for test set: 0.7746.\n",
+      "Training a SVC using a training set size of 200. . .\n",
+      "Trained model in 0.0121 seconds\n",
+      "Made predictions in 0.0069 seconds.\n",
+      "F1 score for training set: 0.8679.\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "F1 score for test set: 0.7815.\n",
+      "Training a SVC using a training set size of 300. . .\n",
+      "Trained model in 0.0135 seconds\n",
+      "Made predictions in 0.0076 seconds.\n",
+      "F1 score for training set: 0.8761.\n",
+      "Made predictions in 0.0030 seconds.\n",
+      "F1 score for test set: 0.7838.\n",
+      "\n",
+      "Training a GaussianNB using a training set size of 100. . .\n",
+      "Trained model in 0.0011 seconds\n",
+      "Made predictions in 0.0004 seconds.\n",
+      "F1 score for training set: 0.8467.\n",
+      "Made predictions in 0.0003 seconds.\n",
+      "F1 score for test set: 0.8029.\n",
+      "Training a GaussianNB using a training set size of 200. . .\n",
+      "Trained model in 0.0009 seconds\n",
+      "Made predictions in 0.0003 seconds.\n",
+      "F1 score for training set: 0.8406.\n",
+      "Made predictions in 0.0005 seconds.\n",
+      "F1 score for test set: 0.7244.\n",
+      "Training a GaussianNB using a training set size of 300. . .\n",
+      "Trained model in 0.0012 seconds\n",
+      "Made predictions in 0.0015 seconds.\n",
+      "F1 score for training set: 0.8038.\n",
+      "Made predictions in 0.0003 seconds.\n",
+      "F1 score for test set: 0.7634.\n",
+      "\n",
+      "Training a RandomForestClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0267 seconds\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "F1 score for training set: 0.9922.\n",
+      "Made predictions in 0.0016 seconds.\n",
+      "F1 score for test set: 0.7068.\n",
+      "Training a RandomForestClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0265 seconds\n",
+      "Made predictions in 0.0011 seconds.\n",
+      "F1 score for training set: 0.9964.\n",
+      "Made predictions in 0.0009 seconds.\n",
+      "F1 score for test set: 0.7023.\n",
+      "Training a RandomForestClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.0285 seconds\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "F1 score for training set: 0.9927.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7500.\n",
+      "\n",
+      "Training a AdaBoostClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.1383 seconds\n",
+      "Made predictions in 0.0057 seconds.\n",
+      "F1 score for training set: 0.9481.\n",
+      "Made predictions in 0.0042 seconds.\n",
+      "F1 score for test set: 0.7669.\n",
+      "Training a AdaBoostClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.1225 seconds\n",
+      "Made predictions in 0.0046 seconds.\n",
+      "F1 score for training set: 0.8927.\n",
+      "Made predictions in 0.0040 seconds.\n",
+      "F1 score for test set: 0.8281.\n",
+      "Training a AdaBoostClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.1612 seconds\n",
+      "Made predictions in 0.0053 seconds.\n",
+      "F1 score for training set: 0.8637.\n",
+      "Made predictions in 0.0040 seconds.\n",
+      "F1 score for test set: 0.7820.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# TODO：从sklearn中引入三个监督学习模型\n",
     "from sklearn.tree import DecisionTreeClassifier \n",
-    "# from sklearn import model_B\n",
-    "# from skearln import model_C\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
     "\n",
     "# TODO：初始化三个模型\n",
     "clf_A = DecisionTreeClassifier()\n",
-    "clf_B = None\n",
-    "clf_C = None\n",
+    "clf_B = SVC()\n",
+    "clf_C = GaussianNB()\n",
+    "clf_D = RandomForestClassifier()\n",
+    "clf_E = AdaBoostClassifier()\n",
+    "\n",
+    "\n",
     "\n",
     "# TODO：设置训练集大小\n",
     "X_train_100 = X_train[:100]\n",
@@ -536,7 +619,7 @@
     "# TODO：对每一个分类器和每一个训练集大小运行'train_predict' \n",
     "# train_predict(clf, X_train, y_train, X_test, y_test)\n",
     "\n",
-    "clf_list = [clf_A]\n",
+    "clf_list = [clf_A, clf_B, clf_C, clf_D, clf_E]\n",
     "X_train_list = [X_train_100, X_train_200, X_train_300]\n",
     "y_train_list = [y_train_100, y_train_200, y_train_300]\n",
     "\n",
@@ -559,7 +642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** 分类器 1 - DecisionTree**  \n",
+    "** 分类器 1 - Decision Tree**  \n",
     "\n",
     "| 训练集大小 | 训练时间 | 预测时间 (测试) | F1值 (训练) | F1值 (测试) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
@@ -567,21 +650,38 @@
     "| 200               |        0.0020           |       0.0              |  1               |  0.7302         |\n",
     "| 300               |        0.0030           |       0.0              |  1               |  0.6935         |\n",
     "\n",
-    "** 分类器 2 - ?**  \n",
+    "** 分类器 2 - Support Vector Machine **  \n",
     "\n",
     "| 训练集大小 | 训练时间 | 预测时间 (测试) | F1值 (训练) | F1值 (测试) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |        EXAMPLE          |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |    EXAMPLE      |\n",
+    "| 100               |        0.0038           |      0.0017            |   0.8777         |   0.7746        |\n",
+    "| 200               |        0.0049           |      0.0025            |   0.8679         |   0.7815        |\n",
+    "| 300               |        0.0087           |      0.0049            |   0.8761         |   0.7838        |\n",
     "\n",
-    "** 分类器 3 - ?**  \n",
+    "** 分类器 3 - Gaussian Naive Bayes**  \n",
     "\n",
     "| 训练集大小 | 训练时间 | 预测时间 (测试) | F1值 (训练) | F1值 (测试) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |        EXAMPLE          |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |    EXAMPLE      |"
+    "| 100               |     0.0007              |    0.0003              |   0.8467         |   0.8029        |\n",
+    "| 200               |     0.0007              |    0.0003              |   0.8406         |   0.8281        |\n",
+    "| 300               |     0.0020              |    0.0006              |   0.8038         |   0.7634        |\n",
+    "\n",
+    "\n",
+    "** 分类器 4 - Random Forest**  \n",
+    "\n",
+    "| 训练集大小 | 训练时间 | 预测时间 (测试) | F1值 (训练) | F1值 (测试) |\n",
+    "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
+    "| 100               |     0.0448              |    0.0003              |   0.9921         |   0.6772        |\n",
+    "| 200               |     0.0264              |    0.0010              |   0.8927         |   0.7445        |\n",
+    "| 300               |     0.0259              |    0.0012              |   0.9927         |   0.7941        |\n",
+    "\n",
+    "** 分类器 5 - AdaBoost**  \n",
+    "\n",
+    "| 训练集大小 | 训练时间 | 预测时间 (测试) | F1值 (训练) | F1值 (测试) |\n",
+    "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
+    "| 100               |     0.2773              |    0.0071              |   0.9481         |   0.7669        |\n",
+    "| 200               |     0.1338              |    0.0063              |   0.9964         |   0.7445        |\n",
+    "| 300               |     0.2416              |    0.0061              |   0.8637         |   0.7820        |"
    ]
   },
   {
@@ -604,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答: **"
+    "**回答: ** Support Vector Machine（SVM)模型训练时间和预测时间均较短,同时在训练集有限的条件下不易出现过拟合的情形预测的精度较高，综合表现比较优秀，因此将采用SVM 模型。"
    ]
   },
   {
@@ -619,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答: **"
+    "**回答: ** Support Vector Machine（SVM)模型是将训练数据点置于一个由各个特征组成的高维空间里, 然后在这个高维空间中去寻找一个平面，这个歌平面可以把通过/不通过的学生分开。模型的训练目标是找到这样一个平面，使得它距离通过/不通过的学生数据点的距离之和尽可能的大。"
    ]
   },
   {
@@ -640,33 +740,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC(C=1, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "  decision_function_shape=None, degree=3, gamma='auto', kernel='rbf',\n",
+      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "  tol=0.001, verbose=False)\n",
+      "Made predictions in 0.0046 seconds.\n",
+      "Tuned model has a training F1 score of 0.8761.\n",
+      "Made predictions in 0.0015 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7838.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: 导入 'GridSearchCV' 和 'make_scorer'\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.metrics import make_scorer, f1_score\n",
     "\n",
     "# TODO：创建你希望调整的参数列表\n",
-    "parameters = None\n",
+    "parameters = {'kernel':('linear', 'rbf', 'poly', 'sigmoid'), 'C':[1, 5, 10]}\n",
     "\n",
     "# TODO：初始化分类器\n",
-    "clf = None\n",
+    "clf = SVC()\n",
     "\n",
     "# TODO：用'make_scorer'创建一个f1评分函数\n",
-    "f1_scorer = None\n",
+    "f1_scorer =  make_scorer(f1_score, pos_label = \"yes\")\n",
     "\n",
     "# TODO：在分类器上使用f1_scorer作为评分函数运行网格搜索\n",
-    "grid_obj = None\n",
+    "grid_obj = GridSearchCV(clf, parameters, scoring = f1_scorer)\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
     "# TODO：用训练集训练grid search object来寻找最佳参数\n",
-    "grid_obj = None\n",
+    "grid_obj = grid_obj.fit(X_train, y_train)\n",
+    "\n",
     "\n",
     "# Get the estimator\n",
     "# 得到预测的结果\n",
     "clf = grid_obj.best_estimator_\n",
+    "\n",
+    "print clf\n",
     "\n",
     "# Report the final F1 score for training and testing after parameter tuning\n",
     "# 输出经过调参之后的训练集和测试集的F1值\n",
@@ -686,7 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答: **"
+    "**回答: ** 最终模型的训练的F1为0.8761，测试为0.7838.相比于没有调整过参数的模型基本没有变化。"
    ]
   },
   {
