--- a/projects_cn/student_intervention/student_intervention.ipynb
+++ b/projects_cn/student_intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Graduation rate of the class: 67.09%\n"
@@ -111,7 +111,7 @@
     "n_students = student_data.shape[0]\n",
     "\n",
     "# TODO： 计算特征数量\n",
-    "n_features = student_data.shape[1]\n",
+    "n_features = student_data.shape[1] -1\n",
     "\n",
     "# TODO： 计算通过的学生数\n",
     "n_passed = student_data[student_data[\"passed\"] == \"yes\"].shape[0]\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -491,98 +491,98 @@
      "output_type": "stream",
      "text": [
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0013 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Trained model in 0.0080 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.6195.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.6552.\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0032 seconds\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0005 seconds.\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for test set: 0.7500.\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0042 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0003 seconds.\n",
-      "F1 score for test set: 0.6281.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.6613.\n",
       "\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0019 seconds\n",
-      "Made predictions in 0.0012 seconds.\n",
+      "Trained model in 0.0350 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.8777.\n",
-      "Made predictions in 0.0011 seconds.\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for test set: 0.7746.\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0121 seconds\n",
-      "Made predictions in 0.0069 seconds.\n",
+      "Trained model in 0.0030 seconds\n",
+      "Made predictions in 0.0030 seconds.\n",
       "F1 score for training set: 0.8679.\n",
-      "Made predictions in 0.0013 seconds.\n",
+      "Made predictions in 0.0020 seconds.\n",
       "F1 score for test set: 0.7815.\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0135 seconds\n",
-      "Made predictions in 0.0076 seconds.\n",
+      "Trained model in 0.0330 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 0.8761.\n",
-      "Made predictions in 0.0030 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for test set: 0.7838.\n",
       "\n",
       "Training a GaussianNB using a training set size of 100. . .\n",
-      "Trained model in 0.0011 seconds\n",
-      "Made predictions in 0.0004 seconds.\n",
+      "Trained model in 0.0000 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 0.8467.\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for test set: 0.8029.\n",
       "Training a GaussianNB using a training set size of 200. . .\n",
-      "Trained model in 0.0009 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Trained model in 0.0160 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 0.8406.\n",
-      "Made predictions in 0.0005 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for test set: 0.7244.\n",
       "Training a GaussianNB using a training set size of 300. . .\n",
-      "Trained model in 0.0012 seconds\n",
-      "Made predictions in 0.0015 seconds.\n",
+      "Trained model in 0.0000 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 0.8038.\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for test set: 0.7634.\n",
       "\n",
       "Training a RandomForestClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0267 seconds\n",
-      "Made predictions in 0.0013 seconds.\n",
-      "F1 score for training set: 0.9922.\n",
-      "Made predictions in 0.0016 seconds.\n",
-      "F1 score for test set: 0.7068.\n",
+      "Trained model in 0.0460 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.9844.\n",
+      "Made predictions in 0.0160 seconds.\n",
+      "F1 score for test set: 0.7153.\n",
       "Training a RandomForestClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0265 seconds\n",
-      "Made predictions in 0.0011 seconds.\n",
+      "Trained model in 0.0310 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 0.9964.\n",
-      "Made predictions in 0.0009 seconds.\n",
-      "F1 score for test set: 0.7023.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7857.\n",
       "Training a RandomForestClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0285 seconds\n",
-      "Made predictions in 0.0013 seconds.\n",
-      "F1 score for training set: 0.9927.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7500.\n",
+      "Trained model in 0.0170 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.9951.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.8092.\n",
       "\n",
       "Training a AdaBoostClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.1383 seconds\n",
-      "Made predictions in 0.0057 seconds.\n",
+      "Trained model in 0.1250 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.9481.\n",
-      "Made predictions in 0.0042 seconds.\n",
+      "Made predictions in 0.0310 seconds.\n",
       "F1 score for test set: 0.7669.\n",
       "Training a AdaBoostClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.1225 seconds\n",
-      "Made predictions in 0.0046 seconds.\n",
+      "Trained model in 0.1160 seconds\n",
+      "Made predictions in 0.0090 seconds.\n",
       "F1 score for training set: 0.8927.\n",
-      "Made predictions in 0.0040 seconds.\n",
+      "Made predictions in 0.0080 seconds.\n",
       "F1 score for test set: 0.8281.\n",
       "Training a AdaBoostClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.1612 seconds\n",
-      "Made predictions in 0.0053 seconds.\n",
+      "Trained model in 0.1270 seconds\n",
+      "Made predictions in 0.0150 seconds.\n",
       "F1 score for training set: 0.8637.\n",
-      "Made predictions in 0.0040 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for test set: 0.7820.\n",
       "\n"
      ]
@@ -597,11 +597,11 @@
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "\n",
     "# TODO：初始化三个模型\n",
-    "clf_A = DecisionTreeClassifier()\n",
-    "clf_B = SVC()\n",
+    "clf_A = DecisionTreeClassifier(random_state = 42)\n",
+    "clf_B = SVC(random_state = 42)\n",
     "clf_C = GaussianNB()\n",
-    "clf_D = RandomForestClassifier()\n",
-    "clf_E = AdaBoostClassifier()\n",
+    "clf_D = RandomForestClassifier(random_state = 42)\n",
+    "clf_E = AdaBoostClassifier(random_state = 42)\n",
     "\n",
     "\n",
     "\n",
@@ -719,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答: ** Support Vector Machine（SVM)模型是将训练数据点置于一个由各个特征组成的高维空间里, 然后在这个高维空间中去寻找一个平面，这个歌平面可以把通过/不通过的学生分开。模型的训练目标是找到这样一个平面，使得它距离通过/不通过的学生数据点的距离之和尽可能的大。"
+    "**回答: ** Support Vector Machine（SVM)模型是将训练数据点置于一个由各个特征组成的高维空间里, 然后在这个高维空间中去寻找一个平面，这个平面可以把通过/不通过的学生分开，模型的训练目标是找到这样一个平面，使得它距离通过/不通过的学生数据点的距离之和尽可能的大,如图所示 <img src= \"plane.png\">。当在这个空间中不存在这类平面时，还可以通过特定的处理方法(核方法)将数据点放置在更高维度的空间中进行分离， 如图所示<img src=\"kernal_trick.png\"> [`Reference`](https://www.zhihu.com/question/21094489)  "
    ]
   },
   {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -751,11 +751,11 @@
      "text": [
       "SVC(C=1, cache_size=200, class_weight=None, coef0=0.0,\n",
       "  decision_function_shape=None, degree=3, gamma='auto', kernel='rbf',\n",
-      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "  max_iter=-1, probability=False, random_state=42, shrinking=True,\n",
       "  tol=0.001, verbose=False)\n",
-      "Made predictions in 0.0046 seconds.\n",
+      "Made predictions in 0.0150 seconds.\n",
       "Tuned model has a training F1 score of 0.8761.\n",
-      "Made predictions in 0.0015 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "Tuned model has a testing F1 score of 0.7838.\n"
      ]
     }
@@ -769,7 +769,7 @@
     "parameters = {'kernel':('linear', 'rbf', 'poly', 'sigmoid'), 'C':[1, 5, 10]}\n",
     "\n",
     "# TODO：初始化分类器\n",
-    "clf = SVC()\n",
+    "clf = SVC(random_state = 42)\n",
     "\n",
     "# TODO：用'make_scorer'创建一个f1评分函数\n",
     "f1_scorer =  make_scorer(f1_score, pos_label = \"yes\")\n",
