--- a/projects_cn/creating_customer_segments/customer_segments.ipynb
+++ b/projects_cn/creating_customer_segments/customer_segments.ipynb
@@ -35,11 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wholesale customers dataset has 440 samples with 6 features each.\n"
+     ]
+    }
+   ],
    "source": [
     "# 引入这个项目需要的库\n",
     "import numpy as np\n",
@@ -49,6 +57,7 @@
     "\n",
     "# 设置以内联的形式显示matplotlib绘制的图片（在notebook中显示更美观）\n",
     "%matplotlib inline\n",
+    "\n",
     "\n",
     "# 载入整个客户数据集\n",
     "try:\n",
@@ -71,11 +80,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>12000.297727</td>\n",
+       "      <td>5796.265909</td>\n",
+       "      <td>7951.277273</td>\n",
+       "      <td>3071.931818</td>\n",
+       "      <td>2881.493182</td>\n",
+       "      <td>1524.870455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>12647.328865</td>\n",
+       "      <td>7380.377175</td>\n",
+       "      <td>9503.162829</td>\n",
+       "      <td>4854.673333</td>\n",
+       "      <td>4767.854448</td>\n",
+       "      <td>2820.105937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3127.750000</td>\n",
+       "      <td>1533.000000</td>\n",
+       "      <td>2153.000000</td>\n",
+       "      <td>742.250000</td>\n",
+       "      <td>256.750000</td>\n",
+       "      <td>408.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8504.000000</td>\n",
+       "      <td>3627.000000</td>\n",
+       "      <td>4755.500000</td>\n",
+       "      <td>1526.000000</td>\n",
+       "      <td>816.500000</td>\n",
+       "      <td>965.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16933.750000</td>\n",
+       "      <td>7190.250000</td>\n",
+       "      <td>10655.750000</td>\n",
+       "      <td>3554.250000</td>\n",
+       "      <td>3922.000000</td>\n",
+       "      <td>1820.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>112151.000000</td>\n",
+       "      <td>73498.000000</td>\n",
+       "      <td>92780.000000</td>\n",
+       "      <td>60869.000000</td>\n",
+       "      <td>40827.000000</td>\n",
+       "      <td>47943.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Fresh          Milk       Grocery        Frozen  \\\n",
+       "count     440.000000    440.000000    440.000000    440.000000   \n",
+       "mean    12000.297727   5796.265909   7951.277273   3071.931818   \n",
+       "std     12647.328865   7380.377175   9503.162829   4854.673333   \n",
+       "min         3.000000     55.000000      3.000000     25.000000   \n",
+       "25%      3127.750000   1533.000000   2153.000000    742.250000   \n",
+       "50%      8504.000000   3627.000000   4755.500000   1526.000000   \n",
+       "75%     16933.750000   7190.250000  10655.750000   3554.250000   \n",
+       "max    112151.000000  73498.000000  92780.000000  60869.000000   \n",
+       "\n",
+       "       Detergents_Paper  Delicatessen  \n",
+       "count        440.000000    440.000000  \n",
+       "mean        2881.493182   1524.870455  \n",
+       "std         4767.854448   2820.105937  \n",
+       "min            3.000000      3.000000  \n",
+       "25%          256.750000    408.250000  \n",
+       "50%          816.500000    965.500000  \n",
+       "75%         3922.000000   1820.250000  \n",
+       "max        40827.000000  47943.000000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 显示数据集的一个描述\n",
     "display(data.describe())"
@@ -91,14 +219,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chosen samples of wholesale customers dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6353</td>\n",
+       "      <td>8808</td>\n",
+       "      <td>7684</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>3516</td>\n",
+       "      <td>7844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4113</td>\n",
+       "      <td>20484</td>\n",
+       "      <td>25957</td>\n",
+       "      <td>1158</td>\n",
+       "      <td>8604</td>\n",
+       "      <td>5206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>43265</td>\n",
+       "      <td>5025</td>\n",
+       "      <td>8117</td>\n",
+       "      <td>6312</td>\n",
+       "      <td>1579</td>\n",
+       "      <td>14351</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fresh   Milk  Grocery  Frozen  Detergents_Paper  Delicatessen\n",
+       "0   6353   8808     7684    2405              3516          7844\n",
+       "1   4113  20484    25957    1158              8604          5206\n",
+       "2  43265   5025     8117    6312              1579         14351"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TODO：从数据集中选择三个你希望抽样的数据点的索引\n",
-    "indices = []\n",
+    "indices = [2, 28, 87]\n",
     "\n",
     "# 为选择的样本建立一个DataFrame\n",
     "samples = pd.DataFrame(data.loc[indices], columns = data.keys()).reset_index(drop = True)\n",
@@ -121,7 +315,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答:**"
+    "**回答:**\n",
+    "    - 0: 零售商，各种物品均有适量采购\n",
+    "    - 1：咖啡馆，牛奶采购量明显高于其他两个客户\n",
+    "    - 2：餐饮业, Fresh，Fronzen和Delicatessen采购量都很多"
    ]
   },
   {
@@ -141,17 +338,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Fresh   Milk  Grocery  Frozen\n",
+      "0    12669   9656     7561     214\n",
+      "1     7057   9810     9568    1762\n",
+      "2     6353   8808     7684    2405\n",
+      "3    13265   1196     4221    6404\n",
+      "4    22615   5410     7198    3915\n",
+      "5     9413   8259     5126     666\n",
+      "6    12126   3199     6975     480\n",
+      "7     7579   4956     9426    1669\n",
+      "8     5963   3648     6192     425\n",
+      "9     6006  11093    18881    1159\n",
+      "10    3366   5403    12974    4400\n",
+      "11   13146   1124     4523    1420\n",
+      "12   31714  12319    11757     287\n",
+      "13   21217   6208    14982    3095\n",
+      "14   24653   9465    12091     294\n",
+      "15   10253   1114     3821     397\n",
+      "16    1020   8816    12121     134\n",
+      "17    5876   6157     2933     839\n",
+      "18   18601   6327    10099    2205\n",
+      "19    7780   2495     9464     669\n",
+      "20   17546   4519     4602    1066\n",
+      "21    5567    871     2010    3383\n",
+      "22   31276   1917     4469    9408\n",
+      "23   26373  36423    22019    5154\n",
+      "24   22647   9776    13792    2915\n",
+      "25   16165   4230     7595     201\n",
+      "26    9898    961     2861    3151\n",
+      "27   14276    803     3045     485\n",
+      "28    4113  20484    25957    1158\n",
+      "29   43088   2100     2609    1200\n",
+      "..     ...    ...      ...     ...\n",
+      "410   6633   2096     4563    1389\n",
+      "411   2126   3289     3281    1535\n",
+      "412     97   3605    12400      98\n",
+      "413   4983   4859     6633   17866\n",
+      "414   5969   1990     3417    5679\n",
+      "415   7842   6046     8552    1691\n",
+      "416   4389  10940    10908     848\n",
+      "417   5065   5499    11055     364\n",
+      "418    660   8494    18622     133\n",
+      "419   8861   3783     2223     633\n",
+      "420   4456   5266    13227      25\n",
+      "421  17063   4847     9053    1031\n",
+      "422  26400   1377     4172     830\n",
+      "423  17565   3686     4657    1059\n",
+      "424  16980   2884    12232     874\n",
+      "425  11243   2408     2593   15348\n",
+      "426  13134   9347    14316    3141\n",
+      "427  31012  16687     5429   15082\n",
+      "428   3047   5970     4910    2198\n",
+      "429   8607   1750     3580      47\n",
+      "430   3097   4230    16483     575\n",
+      "431   8533   5506     5160   13486\n",
+      "432  21117   1162     4754     269\n",
+      "433   1982   3218     1493    1541\n",
+      "434  16731   3922     7994     688\n",
+      "435  29703  12051    16027   13135\n",
+      "436  39228   1431      764    4510\n",
+      "437  14531  15488    30243     437\n",
+      "438  10290   1981     2232    1038\n",
+      "439   2787   1698     2510      65\n",
+      "\n",
+      "[440 rows x 4 columns]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-807832bb6bcf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# TODO：使用给定的特征作为目标，将数据分割成训练集和测试集\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.25\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m42\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# TODO：创建一个决策树回归器并在训练集上训练它\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# TODO：为DataFrame创建一个副本，用'drop'函数丢弃一些指定的特征\n",
-    "new_data = None\n",
+    "new_data = data.drop(['Detergents_Paper', 'Delicatessen'], axis = 1, inplace = False)\n",
+    "print new_data\n",
     "\n",
     "# TODO：使用给定的特征作为目标，将数据分割成训练集和测试集\n",
-    "X_train, X_test, y_train, y_test = (None, None, None, None)\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state = 42)\n",
     "\n",
     "# TODO：创建一个决策树回归器并在训练集上训练它\n",
     "regressor = None\n",
@@ -769,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
