--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -114,7 +114,9 @@
     "    - *testing*: Whether the simulation is in tesing trail\n",
     "    - *optimized*: set to True to change the default log file name \n",
     "- *`environment.py`*: *act()*  is called when an agent performs an action.\n",
-    "- *`simulator.py`*:  *`'render_text()'`*  is the non-GUI render display of the simulation, the simulated trial data will be rendered in the terminal/command prompt, while the *`'render()'`* is the GUI render display of the simulation, it will display the visual data. \n"
+    "- *`simulator.py`*:  *`'render_text()'`*  is the non-GUI render display of the simulation, the simulated trial data will be rendered in the terminal/command prompt, while the *`'render()'`* is the GUI render display of the simulation, it will display the visual data.   \n",
+    "- *`planner.py`* ：the *`'next_waypoint()`* function consider East-West direction first\n",
+    "."
    ]
   },
   {
@@ -185,7 +187,7 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "- *near 60% chance the drving agent making bad decisions, near 40% percent of those bad decisions casue accidents*  \n",
+    "- *around 40% chance the drving agent making bad decisions, near 10% percent of those bad decisions casue accidents*  \n",
     "- *yes, since the agent is drving randomly, it is very unreliable.*  \n",
     "- *The agent received negative rewards, and the rewards suggest it has been penalized, but cannot tell whether it is heavy engouh.*  \n",
     "- *no, the outcome seems no change.*  \n",
@@ -265,7 +267,7 @@
     "- 'oncoming': 3 (None,forward, left, right)\n",
     "- 'left': 4 (None, forward, left, right)    \n",
     "\n",
-    "So the size of the state space is = 3 `*` 2 `*` 3 `*`4 = 72, it it not a very huge state space, thus the driving agent could learn a policy for each possible state within a reasonable number of training trials. "
+    "So the size of the state space is = 3 `*` 2 `*` 4 `*`4 = 96, it it not a very huge state space, thus the driving agent could learn a policy for each possible state within a reasonable number of training trials. "
    ]
   },
   {
@@ -486,6 +488,7 @@
     "  -  (forward, red, foward, None): idle\n",
     "  -  (left, green, foward, forward): turn left\n",
     "  \n",
+    "-  No state was found that in which the policy is different than what would be expected from an optimal policy \n",
     "- example:   \n",
     "('right', 'green', 'right', 'right')  \n",
     " -- forward : 0.01  \n",
